solving some CSS issues

--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -1,7 +1,6 @@
 .chatContainer {
   width: 100%;
   height: calc(100vh - (56.8px));
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   background: linear-gradient(#88B6F2, #9049BF);
@@ -10,6 +9,7 @@
 
 .chatForm {
   display: flex;
+  flex-direction: row;
   padding: 10px;
   background-color: transparent;
 }
@@ -24,9 +24,11 @@
 }
 
 .chatButton {
-  padding: 10px 15px;
+  margin-top: 12px;
+  padding: 0px 15px;
+  height: 70%;
   border: none;
-  border-radius: 20px;
+  border-radius: 50px;
   background-color: #CEE3FF;
   color: #161459;
   cursor: pointer;
