--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -36,6 +36,7 @@
   font-size: 16px;
   width: 100%;
   padding-left: 10px;
+  padding: 0%;
 }
 
 .searchinput::placeholder {
@@ -51,6 +52,7 @@
   color: #DFDCF2;
   border-radius: 25px;
   transition: all 0.3s ease; 
+  margin-top: 0%;
 }
 
 
