--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -7,14 +7,15 @@
     background: linear-gradient(to bottom, #a5d8ff, #9a4bff);
 }
 .logo-image {
-    width: 400px;
-    height: 300px; /* Adjust the size of the logo as needed */
-    margin-bottom: 20px;
+    width: 50%;
+    height: auto; /* Adjust the size of the logo as needed */
+    margin-bottom: 100px;
 }
 
 .button-container {
     display: flex;
     gap: 20px;
+    margin-left: 20px;
 }
 
 .custom-button {
